--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
             </div>
             <div>
                 <i class="fa-brands fa-app-store-ios"></i>
-                <h2>Web Development</h2>
+                <h2>Web Development(Front-end)</h2>
                 <p>Creating webpage layouts, writing code, editing website content, and making adjustments based on client feedback.</p>
                 <a href="https://www.google.com/aclk?sa=l&ai=DChcSEwjfzLHgp4j-AhUEDisKHcf2C7MYABABGgJzZg&sig=AOD64_2dCo1_iX5NIVIN0oFKmBqCSIZ6QQ&q&adurl&ved=2ahUKEwiW96rgp4j-AhVkg2MGHe6uD7cQ0Qx6BAgHEAE">Learn more</a>
             </div>
             <div>
                 <i class="fa-solid fa-key"></i>
-                <h2>Data Analysis</h2>
-                <p>I will python programming language,libraries and  for graphical representation of information and data.</p>
+                <h2>Data Analysis(Intermediate)</h2>
+                <p>I will use python programming language,libraries and  for graphical representation of information and data.</p>
                 <a href="https://readthedocs.org/projects/datavis/downloads/pdf/latest/">Learn more</a>
             </div>
         </div>
