--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="row">
             <div class="about-col-1">
             
-                <img src="images/secondimage-new.png" >
+                <img src="images/secondimage-new.png", height="100%", width="100%", aria-placeholder="100%" >
 
             </div>
             <div class="about-col-2">
